# DataManagement

./: Document.md  LICENSE  README.md  Readme.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
DataManagement/: __init__.py  core.py
tests/: test_datapoint.py  test_dataserials.py
